--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html>
 <head>
-<link href="custom.css" type="text/css" rel="stylesheet" media="screen"/>
-<link href="bootstrap.min.css" type="text/css" rel="stylesheet" media="screen"/>
+  <title>test</title>
+  <link href="custom.css" type="text/css" rel="stylesheet" media="screen"/>
+  <link href="bootstrap.min.css" type="text/css" rel="stylesheet" media="screen"/>
+</head>
 
 <style>
 
@@ -149,7 +153,7 @@
 }
 
 </style>
-</head>
+
 <body>
 
 <div class="full-page">
@@ -311,5 +315,6 @@
     sandwichInfo.classList.toggle("open");
   });
 </script>
+
 </body>
 </html>
