--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 </style>
 
 <body>
+<div class="container">
 
 <div class="full-page">
   <p><h1>Birches Mountain Restaurant</h1></p>
@@ -287,6 +288,7 @@
     <p><strong>$12.00</strong></p>
     <p>Slow roasted pulled pork, homemade BBQ sauce, and shaved cabbage, all served on Portuguese sweet bread rolls.</p>
   </div>
+</div>
 </div>
 
 <script>
